added new files

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -11,6 +11,7 @@
             <input type="password" name="password"id="password"  [(ngModel)]="password"
             placeholder="Enter Your Password" required autofocus>
         </div>
-        
+        <div>
             <button type="submit">submit</button>
+        </div>
         </form>
