--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,4 +1,4 @@
-<html >
+<img class="reg" src="re.jpg">
 <body >    
 <h1>REGISTER</h1>
       <form ngNativeValidate (submit)="register()"  (ngSubmit)="register()">
@@ -32,4 +32,3 @@
     Already Registered! <button routerLink="login">Login</button>
 </p>
 </body>
-</html>
