--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,37 +1,31 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">Bikeshopapp</a>
+    <a class="navbar-brand" href="#">Two wheeler showroom</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
   
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
-        </li>
         <!-- <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" routerLink="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Role
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Home
           </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <li><a class="dropdown-item" routerLink="adminlogin">Admin</a></li>
-          <li><a class="dropdown-item" routerLink="register">User</a></li>
-          </ul>
-          </li> -->
-        <!-- <li class="nav-item">
-          <a class="nav-link" routerLink="register">Register</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" routerLink="login">Login</a>
-          </li> -->
-          <li class="nav-item">
-            <a class="nav-link" routerLink="listbike">Bikelist</a>
-          </li>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="nav-link" routerLink="adminlogin">AdminLogin</a>
+            <a class="nav-link" routerLink="login">login</a>
+            <div class="dropdown-divider"></div>
+            <a class="nav-link" routerLink="register">register</a>
+          </div>
+        </li> -->
+        <li class="nav-item"><a class="nav-link" routerLink="home">Home</a></li>
           <li class="nav-item">
             <a class="nav-link" routerLink="register">Register</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" routerLink="login">Login</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="listbike">Bikelist</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" routerLink="order">Order</a>
@@ -45,17 +39,7 @@
           <li class="nav-item" *ngIf="isLoggedIn()" > 
             <a class="nav-link" routerLink="home" (click)="logout()">Logout</a>
           </li>
-         <!-- <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Dropdown
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" routerLink="">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Something else here</a>
-          </div>
-        </li> -->
+          
         <!-- <li class="nav-item">
           <a class="nav-link disabled" href="#">Disabled</a>
         </li> -->
