--- a/src/app/listuser/listuser.component.html
+++ b/src/app/listuser/listuser.component.html
@@ -19,7 +19,7 @@
             <td>{{user.mail_id}}</td>
             <td>{{user.password}}</td>
             <td>{{user.mobilenumber}}</td>
-             <td><button type="button" (click)="deleteuser(users.name)"class="btn-danger"> DELETE</button></td>
+             <td><button type="button" (click)="deleteuser(user.name)"class="btn-danger"> DELETE</button></td>
             </tr>
     </tbody>
 </table>
