--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -36,8 +36,9 @@
             placeholder="Enter the bikemodel" required>
         </div>
         <br>
-       
+         <div>
             <button type="submit">submit</button>
+        </div>
         </form>
         
 
