--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -29,6 +29,6 @@
         
 </form>
 <p style="margin-left:500px">
-    Already Registered! <button routerLink="login">Login</button>
+    Already Registered! Ignore
 </p>
 </body>
