--- a/src/app/reviews/reviews.component.html
+++ b/src/app/reviews/reviews.component.html
@@ -25,5 +25,7 @@
                 placeholder="Enter your feedback" 
                 required></textarea>
         </div>
+        <div>
            <button type="submit">submit</button>
+        </div>
         </form>
